Run in virtual environment